# vagas

./: .env  .env.example  API_DOCUMENTATION.md  API_EXAMPLES.md  API_VAGAS_SKILLS_DOCUMENTATION.md  DEPLOY_GUIDE.md  Procfile  README.md  README_DEPLOY.md  README_SUPABASE.md  advanced_data_processor.py  analysis_queries.sql  analyze_all_problematic_sectors.py  analyze_data_patterns.py  analyze_descriptions_by_sector.py  analyze_job_descriptions.py  analyze_jobs_data.py  analyze_sector_description_diversity.py  analyze_servico_social_sector.py  api_supabase_vagas.py  api_vagas.py  api_vagas_skills.py  app.js  catho_batch_001_vagas_1-4500.csv  catho_sectors_extractor.py  catho_sectors_extractor_demo.py  catho_sectors_uploader.py  catho_selenium_success_www.catho.com.br.html  catho_vagas_desenvolvedor_analysis.html  check_csv.py  check_latest_jobs.py  check_medical_skills.py  check_setor.py  check_setores.py  check_table_columns.py  check_tables.py  check_tables_simple.py  check_vagas_structure.py  clean_and_structure_data.py  clean_and_structure_data_complete.py  (+141 more)
