[tool.poetry]
name = "vagas"
version = "0.1.0"
description = "API Vagas Skills"
authors = ["Seu Nome <email@exemplo.com>"]
readme = "README.md"
packages = [{include = "api_vagas_skills"}]
python = "^3.13"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.4.2"
supabase = "2.3.0"
python-dotenv = "1.0.0"
requests = "2.31.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
